--- a/index.html
+++ b/index.html
@@ -2,15 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Updated Favicon -->
+    <link rel="icon" type="image/png" href="/Design_2.png" />
+
+    <!-- SEO Meta Tags -->
+    <title>SUI Mind - AI-Powered Blockchain Solutions</title>
+    <meta
+      name="description"
+      content="Explore SUI Mind, an innovative platform merging AI and blockchain to offer advanced search capabilities and a marketplace for AI agents, swap tokens on the SUI blockchain."
+    />
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="SUI Mind - AI-Powered Blockchain Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Discover SUI Mind: The ultimate platform for AI and blockchain integration, featuring powerful search tools and a unique marketplace, swap tokens on the SUI blockchain."
+    />
+    <meta property="og:image" content="/public/sui-mind-preview.png" />
+    <meta property="og:url" content="https://suimind.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="SUI Mind - AI-Powered Blockchain Solutions"
+    />
+    <meta
+      name="twitter:description"
+      content="Harness the power of AI and blockchain with SUI Mind's advanced tools and marketplace."
+    />
+    <meta name="twitter:image" content="/public/sui-mind-preview.png" />
+
+    <!-- Preconnect and Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    <title>SuiMind</title>
   </head>
   <body>
     <div id="root"></div>
